--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_reactive_ble: ^5.0.2
   cupertino_icons: ^1.0.8
   permission_handler: ^12.0.0+1
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_test:
